# stockquotes

./: LICENSE  README.md  default.nix  hie.yaml  shell.nix  stockquotes.cabal
src/: Charts.hs  HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  StatReport.hs
