cabal-version:      3.0

name:               stockquotes
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:


-- URL for the project homepage or repository.
homepage:


-- The license under which the package is released.
license:            MIT
license-file:       LICENSE

author:             Lenivaya

maintainer:         xocada@gmail.com


extra-source-files:
    CHANGELOG.md
    README.md

executable stockquotes
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src
    exposed-modules:
        StatReport
        QuoteData
        Charts
        Params
        HtmlReport

    build-depends:
        base ^>=4.14.3.0
        , text ==1.2.*
        , bytestring >=0.10 && <0.12
        , optparse-applicative >=0.14 && <0.17
        , time >=1.8 && <1.12
        , cassava ==0.5.*
        , colonnade >=1.1 && <1.3
        , blaze-html ==0.9.*
        , blaze-colonnade >=1.1 && <1.3
        , Chart >=1.8 && <1.10
        , Chart-diagrams >=1.8 && <1.10
        , fmt >=0.5 && <0.7

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
